Lower minimum Java version from 25 to 17 for broader adoption
Downgrade JavaFX from 25.0.2 to 21.0.5, replace Locale.of() (Java 19+)
with new Locale() constructor, and update CI, JRE bundling links, and
README accordingly.

Co-Authored-By: Claude Opus 4.6 <noreply@anthropic.com>